--- a/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Create.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Create.cshtml
@@ -126,7 +126,7 @@
                                         <tr>
                                             <th style="width:400px">
                                                 Thời gian khám
-                                                @Html.EditorFor(model => model.thoiGianLayMau, new { htmlAttributes = new { @class = "single-input", @type = "datetime-local", @for = "datepicker", @name = "thoiGianLayMau" } })
+                                                @Html.EditorFor(model => model.tgLayMau, new { htmlAttributes = new { @class = "single-input", @type = "datetime-local", @for = "datepicker", @name = "thoiGianLayMau" } })
                                             </th>
                                             <th class="col-lg-6">
                                                 <div>
@@ -234,7 +234,7 @@
                                             </th>
                                             <th class="col-lg-6">
                                                 Thời gian lấy máu
-                                                @Html.EditorFor(model => model.thoiGianLayMau, new { htmlAttributes = new { @class = "single-input", @type = "datetime-local", @for = "datepicker", @name = "thoiGianLayMau" } })
+                                                @Html.EditorFor(model => model.tgLayMau, new { htmlAttributes = new { @class = "single-input", @type = "datetime-local", @for = "datepicker", @name = "thoiGianLayMau" } })
                                             </th>
                                         </tr>
                                     </table>
